<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editText_name"
            android:inputType="textCapWords"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginLeft="8dp"
            android:text="@string/toppings"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkbox_whippedCream"
            android:paddingLeft="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/whipped_cream"
            android:textSize="16sp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkbox_chocolate"
            android:paddingLeft="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/chocolate"
            android:textSize="16sp"/>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/quantity"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="-"
                android:layout_marginTop="16dp"
                android:onClick="decrement"
                android:layout_marginLeft="8dp"/>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:id="@+id/quantity_text_view"
                android:textColor="#000000"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="8dp"
                />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="+"
                android:layout_marginTop="16dp"
                android:onClick="increment"
                android:layout_marginLeft="8dp"/>


        </LinearLayout>



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:onClick="submitOrder"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"/>

    </LinearLayout>

</ScrollView>